# StaticConfigReader-cpp

./: .gitmodules  CMakeLists.txt  README.md  second.yaml  test.cpp  test.yaml
include/: SimpleYamlConfigReader.h  StaticYamlConfigReader.h
include/YamlConfigReader/: StaticReader.h  StaticReaderStaticFilename.h  helpers.h
src/: CMakeLists.txt  StaticYamlConfigReader.cpp
